--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -7,7 +7,7 @@ dotenv:
 
 vars:
   TARGET_DIR: target
-  TOOLS_BIN_DIR: bin
+  TOOLS_BIN_DIR: '{{.USER_WORKING_DIR}}/bin'
   VERSION:
     sh: git describe --tags 2>/dev/null | sed 's/^v//' || echo "0.0.0"
 
