--- a/taskfiles/tools.yml
+++ b/taskfiles/tools.yml
@@ -10,17 +10,20 @@ tasks:
     desc: Install golangci-lint
     required:
       vars:
+        - TOOLS_BIN_DIR
         - GOLANGCI_LINT_VERSION
-    run: once
     silent: true
     sources:
       - .versions
     cmds:
-      - GOBIN={{.GOBIN}} go install github.com/golangci/golangci-lint/v2/cmd/golangci-lint@v{{.GOLANGCI_LINT_VERSION}}
+      - GOBIN={{.TOOLS_BIN_DIR}} go install github.com/golangci/golangci-lint/v2/cmd/golangci-lint@v{{.GOLANGCI_LINT_VERSION}}
 
   install-govulncheck:
     desc: Install govulncheck
+    required:
+      vars:
+        - TOOLS_BIN_DIR
     run: always
     silent: true
     cmds:
-      - GOBIN={{.GOBIN}} go install golang.org/x/vuln/cmd/govulncheck@latest
+      - GOBIN={{.TOOLS_BIN_DIR}} go install golang.org/x/vuln/cmd/govulncheck@latest
