Use relative paths from config dir

--- a/internal/rpcplugin/testdata/catshout/plugin.yaml
+++ b/internal/rpcplugin/testdata/catshout/plugin.yaml
@@ -1,6 +1,6 @@
 name: catshout
 summary: Add your summary here
-command: ["go", "run", "."] # /testdata/catshout"]
+command: ["go", "run", "./src"]
 type: processor
 fields: []
 # Example of how to add configuration fields:
