RPC connector for TigerBeetle Implements an input connector for streaming [TigerBeetle](https://tigerbeetle.com/) events via CDC.
The CDC process is stateless, so this connector requires a [`cache_resource`](https://docs.redpanda.com/redpanda-connect/components/caches/about) to persist progress and resume from the last acknowledged event when restarted.

- Includes documentation and integration tests.
- Licensing information in the file header is pending.

For more information about TigerBeetle CDC, see https://docs.tigerbeetle.com/operating/cdc/

--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -53,6 +53,7 @@ jobs:
           - ./internal/impl/snowflake/streaming
           # - ./internal/impl/splunk
           # - ./internal/impl/sql
+          - ./internal/impl/tigerbeetle
           # - ./internal/impl/zeromq
 
     steps:
