--- a/.golangci.yml
+++ b/.golangci.yml
@@ -32,8 +32,10 @@ linters-settings:
     packages:
       - "io/ioutil"
 
+version: "2"
 linters:
   disable-all: true
+  default: none
   enable:
     # Default linters reported by `golangci-lint help linters` in v1.41.1
     # Disabled for Go 1.18
@@ -59,3 +61,23 @@ linters:
     # - gosec
     # - misspell
     # - prealloc
+    - errorlint
+    - varnamelen
+  settings:
+    varnamelen:
+      max-distance: 5
+      min-name-length: 3
+      check-receiver: true
+      check-return: true
+      check-type-param: true
+      ignore-names:
+        - err
+        - ch
+        - db
+        - tx
+      ignore-type-assert-ok: true
+      ignore-map-index-ok: true
+      ignore-chan-recv-ok: true
+formatters:
+  enable:
+    - gofmt
