resources/docker/profiling: enable anonymous Grafana access

--- a/resources/docker/profiling/docker-compose.yaml
+++ b/resources/docker/profiling/docker-compose.yaml
@@ -1,6 +1,6 @@
 volumes:
- prometheus_data: {}
- grafana_data: {}
+   prometheus_data: {}
+  grafana_data: {}
 
 services:
   jaeger:
@@ -33,5 +33,9 @@ services:
     volumes:
       - grafana_data:/var/lib/grafana
       - ./grafana/provisioning/:/etc/grafana/provisioning/
+    environment:
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_DISABLE_LOGIN_FORM=true
     env_file:
       - ./grafana/config.monitoring
