resources/docker/profiling: add Go runtime dashboard to profiling Grafana

--- a/resources/docker/profiling/config.yaml
+++ b/resources/docker/profiling/config.yaml
@@ -21,7 +21,9 @@ output:
     ]'
 
 metrics:
-  prometheus: {}
+  prometheus:
+    add_process_metrics: true
+    add_go_metrics: true
 
 # tracer:
 #   jaeger:
