--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -59,8 +59,8 @@ builds:
         - cmd: ./resources/scripts/fips_patchelf.sh "{{ .Path }}"
     tool: 'microsoft-go'
     env:
-      - GOEXPERIMENT=systemcrypto
       - CGO_ENABLED=1
+      - GOPATH={{ .Env.HOME }}/go-fips
     ldflags:
       -s -w
       -X main.Version={{.Version}}
