chore(resources/docker/profiling): minor improvements
- Disable jaeger as tracing is disabled by default in config
- Do not scrape prometheus itself
- Use quotes for port mapping
- Limit CPU usage to 1 core

--- a/resources/docker/profiling/config.yaml
+++ b/resources/docker/profiling/config.yaml
@@ -25,6 +25,7 @@ metrics:
     add_process_metrics: true
     add_go_metrics: true
 
+# Also enable jaeger service in docker-compose.yml
 # tracer:
 #   jaeger:
 #     agent_address: 'localhost:6831'
