--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,13 @@ jobs:
       with:
         secret-ids: |
           ,sdlc/prod/github/cloudsmith
+          ,sdlc/prod/github/dockerhub
         parse-json-secrets: true
+
+    - name: Login to Amazon ECR Public
+      uses: aws-actions/amazon-ecr-login@v2
+      with:
+        registry-type: public
 
     - name: Free up some disk space on ubuntu
       if: ${{ runner.os == 'Linux' }}
@@ -53,7 +59,7 @@ jobs:
     - name: Install Go
       uses: actions/setup-go@v5
       with:
-        go-version: stable
+        go-version: 1.25.1
 
     - name: Install Microsoft Go
       run: |
@@ -84,66 +90,6 @@ jobs:
     - name: Install cloudsmith CLI (for publishing Linux packages)
       run: pip install cloudsmith-cli
 
-    - name: GoReleaser
-      uses: goreleaser/goreleaser-action@v6
-      with:
-        args: release --release-notes=./release_notes.md --timeout 120m
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        CLOUDSMITH_API_KEY: ${{ env.CLOUDSMITH_API_KEY }}
-
-  docker:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - flavor: default
-            latest: auto
-            suffix: ""
-            platform: linux/amd64,linux/arm64
-            file: ./resources/docker/Dockerfile
-          - flavor: cloud
-            latest: false
-            suffix: -cloud
-            platform: linux/amd64,linux/arm64
-            file: ./resources/docker/Dockerfile.cloud
-          - flavor: ai
-            latest: false
-            suffix: -ai
-            platform: linux/amd64,linux/arm64
-            file: ./resources/docker/Dockerfile.ai
-    permissions:
-      id-token: write
-      packages: write
-      contents: read
-    steps:
-
-    - name: Check Out Repo
-      uses: actions/checkout@v4
-
-    - name: Free up some disk space on ubuntu
-      if: ${{ runner.os == 'Linux' }}
-      run: |
-        # Workaround to provide additional free space for testing.
-        #   https://github.com/actions/virtual-environments/issues/2840
-        sudo rm -rf /usr/share/dotnet
-        sudo rm -rf /opt/ghc
-        sudo rm -rf "/usr/local/share/boost"
-        sudo rm -rf "$AGENT_TOOLSDIRECTORY"
-
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-region: ${{ vars.RP_AWS_CRED_REGION }}
-        role-to-assume: arn:aws:iam::${{ secrets.RP_AWS_CRED_ACCOUNT_ID }}:role/${{ vars.RP_AWS_CRED_BASE_ROLE_NAME }}${{ github.event.repository.name }}
-
-    - name: Get secrets from AWS Secrets Manager
-      uses: aws-actions/aws-secretsmanager-get-secrets@v2
-      with:
-        secret-ids: |
-          ,sdlc/prod/github/dockerhub
-        parse-json-secrets: true
-
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
@@ -151,11 +97,9 @@ jobs:
         password: ${{ env.DOCKERHUB_TOKEN }}
 
     - name: Install Buildx
-      id: buildx
       uses: docker/setup-buildx-action@v3
 
     - name: Write telemetry private key
-      if: ${{ matrix.suffix == '' }}
       env:
         CONNECT_TELEMETRY_PRIV_KEY: ${{ secrets.TELEMETRY_PRIVATE_KEY }}
       run: |
@@ -163,37 +107,10 @@ jobs:
         git update-index --skip-worktree ./internal/telemetry/key.pem
         echo "$CONNECT_TELEMETRY_PRIV_KEY" > ./internal/telemetry/key.pem
 
-    - name: Docker meta
-      id: docker_meta
-      uses: docker/metadata-action@v5
+    - name: GoReleaser
+      uses: goreleaser/goreleaser-action@v6
       with:
-        images: |
-          redpandadata/connect
-          public.ecr.aws/l9j0i2e0/connect
-        flavor: |
-          latest=${{ matrix.latest }}
-          suffix=${{ matrix.suffix }}
-        tags: |
-          type=semver,suffix=${{ matrix.suffix }},pattern={{version}}
-          type=semver,suffix=${{ matrix.suffix }},pattern={{major}}.{{minor}}
-          type=semver,suffix=${{ matrix.suffix }},pattern={{major}}
-
-    - uses: aws-actions/configure-aws-credentials@v4
-      if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-      with:
-        aws-region: us-east-1
-        role-to-assume: arn:aws:iam::${{ secrets.RP_AWS_CRED_ACCOUNT_ID }}:role/${{ vars.RP_AWS_CRED_BASE_ROLE_NAME }}${{ github.event.repository.name }}
-
-    - uses: aws-actions/amazon-ecr-login@v2
-      if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-      with:
-        registry-type: public
-
-    - name: Build and push
-      uses: docker/build-push-action@v6
-      with:
-        context: ./
-        file: ${{ matrix.file }}
-        platforms: ${{ matrix.platform }}
-        push: true
-        tags: ${{ steps.docker_meta.outputs.tags }}
+        args: release --release-notes=./release_notes.md --timeout 120m
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        CLOUDSMITH_API_KEY: ${{ env.CLOUDSMITH_API_KEY }}
