.goreleaser.local: use fixed dev tags
This is more convenient and works around bundle tags being incompatible with docker tags.

For example after tagging bundles we get version like public/bundle/enterprise/v4.66.1-SNAPSHOT-255ed50c4

--- a/.goreleaser.local/connect-ai.yaml
+++ b/.goreleaser.local/connect-ai.yaml
@@ -25,7 +25,7 @@ dockers_v2:
     images:
       - redpandadata/connect
     tags:
-      - "{{ .Version }}-ai"
+      - dev-ai
     platforms:
       - linux/arm64
     extra_files:
