--- a/.goreleaser.local/connect-cloud.yaml
+++ b/.goreleaser.local/connect-cloud.yaml
@@ -25,7 +25,7 @@ dockers_v2:
     images:
       - redpandadata/connect
     tags:
-      - "{{ .Version }}-cloud"
+      - dev-cloud
     platforms:
       - linux/arm64
     extra_files:
