--- a/.goreleaser.local/connect-ai.yaml
+++ b/.goreleaser.local/connect-ai.yaml
@@ -25,7 +25,7 @@ dockers_v2:
     images:
       - redpandadata/connect
     tags:
-      - "{{ .Version }}-ai"
+      - "{{ replace .Version \"/\" \"-\" }}-ai"
     platforms:
       - linux/arm64
     extra_files:
