temporarily (hopefully) hardcode aws regions for creds

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,11 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        aws-region: ${{ vars.RP_AWS_CRED_REGION }}
+        # This is hardcoded because the org variable RP_AWS_CRED_REGION was set
+        # to us-east-2 and it broke our release process with the message:
+        # "GetAuthorizationToken command is only supported in us-east-1"
+        # And we do not have time to investigate further. Pray for us.
+        aws-region: us-east-1
         role-to-assume: arn:aws:iam::${{ secrets.RP_AWS_CRED_ACCOUNT_ID }}:role/${{ vars.RP_AWS_CRED_BASE_ROLE_NAME }}${{ github.event.repository.name }}
 
     - name: Get secrets from AWS Secrets Manager
