--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,14 +16,10 @@ jobs:
     - name: Check Out Repo
       uses: actions/checkout@v4
 
-    - name: Configure AWS credentials
+    - name: Configure AWS credentials for access to AWS Secrets Manager
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        # This is hardcoded because the org variable RP_AWS_CRED_REGION was set
-        # to us-east-2 and it broke our release process with the message:
-        # "GetAuthorizationToken command is only supported in us-east-1"
-        # And we do not have time to investigate further. Pray for us.
-        aws-region: us-east-1
+        aws-region: ${{ vars.RP_AWS_CRED_REGION }}
         role-to-assume: arn:aws:iam::${{ secrets.RP_AWS_CRED_ACCOUNT_ID }}:role/${{ vars.RP_AWS_CRED_BASE_ROLE_NAME }}${{ github.event.repository.name }}
 
     - name: Get secrets from AWS Secrets Manager
@@ -33,6 +29,12 @@ jobs:
           ,sdlc/prod/github/cloudsmith
           ,sdlc/prod/github/dockerhub
         parse-json-secrets: true
+
+    - name: Configure AWS credentials for access to Amazon ECR Public
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-region: us-east-1
+        role-to-assume: arn:aws:iam::${{ secrets.RP_AWS_CRED_ACCOUNT_ID }}:role/${{ vars.RP_AWS_CRED_BASE_ROLE_NAME }}${{ github.event.repository.name }}
 
     - name: Login to Amazon ECR Public
       uses: aws-actions/amazon-ecr-login@v2
