Roll back version and turn off fail-fast

--- a/.github/workflows/upload_plugin.yml
+++ b/.github/workflows/upload_plugin.yml
@@ -30,6 +30,7 @@ jobs:
       id-token: write
 
     strategy:
+      fail-fast: false
       matrix:
         binary-name: [ 'connect', 'connect-fips' ]
 
