--- a/.goreleaser/connect-fips.yaml
+++ b/.goreleaser/connect-fips.yaml
@@ -79,5 +79,9 @@ release:
     owner: redpanda-data
     name: connect
   prerelease: auto
+  replace_existing_artifacts: true
   mode: keep-existing
+
+checksum:
+  split: true
 
