--- a/.goreleaser/connect-lambda.yaml
+++ b/.goreleaser/connect-lambda.yaml
@@ -40,5 +40,9 @@ release:
     owner: redpanda-data
     name: connect
   prerelease: auto
+  replace_existing_artifacts: true
   mode: keep-existing
+
+checksum:
+  split: true
 
