And add the disk space cleanup back in

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
 
     strategy:
       fail-fast: false
+      max-parallel: 3
       matrix:
         variant:
           - connect-ai
@@ -52,6 +53,28 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v2
       with:
         registry-type: public
+
+
+    - name: Free up some disk space on ubuntu
+      if: ${{ runner.os == 'Linux' }}
+      run: |
+        # Workaround to provide additional free space for testing.
+        #   https://github.com/actions/virtual-environments/issues/2840
+        sudo rm -rf /usr/share/dotnet
+        sudo rm -rf /opt/ghc
+        sudo rm -rf /usr/local/lib/android
+        sudo rm -rf /usr/local/share/powershell
+        sudo rm -rf "/opt/google/chrome"
+        sudo rm -rf "/opt/microsoft/msedge"
+        sudo rm -rf "/opt/microsoft/powershell"
+        sudo rm -rf "/opt/pipx"
+        sudo rm -rf "/usr/lib/mono"
+        sudo rm -rf "/usr/local/julia*"
+        sudo rm -rf "/usr/local/lib/node_modules"
+        sudo rm -rf "/usr/local/share/chromium"
+        sudo rm -rf "/usr/share/swift"
+        sudo rm -rf "/usr/local/share/boost"
+        sudo rm -rf "$AGENT_TOOLSDIRECTORY"
 
     - name: Install Go
       uses: actions/setup-go@v6
