--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   integration-test:
     if: ${{ github.repository == 'redpanda-data/connect' }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-32
     env:
       CGO_ENABLED: 0
     strategy:
