taskfiles: fix building local docker images for development
Extract building to dedicated internal task, use yq to modify GoReleaser config file on the fly setting single architecture.

  • skipping announce, archive, nfpm, publish, and validate...
  • cleaning distribution directory
  • loading environment variables
  • getting and validating git state
    • git state                                      commit=dea6edc7edbf63f8dc89de2f5bd1f19007cf9d44 branch=mmt/edge current_tag=public/bundle/enterprise/v4.67.5 previous_tag=v4.68.0-rc4 dirty=true
    • pipe skipped or partially skipped              reason=disabled during snapshot mode
  • parsing tag
    • current tag is not semver                      error=invalid semantic version tag=public/bundle/enterprise/v4.67.5
    • pipe skipped or partially skipped              reason=validation is disabled
  • setting defaults
  • snapshotting
    • building snapshot...                           version=public/bundle/enterprise/v4.67.5-SNAPSHOT-dea6edc7e
  • ensuring distribution directory
  • setting up metadata
  • writing release metadata
  • loading go mod information
  • build prerequisites
  • building binaries
    • building                                       binary=target/dist/connect_linux_arm64_v8.0/redpanda-connect
    • running hook                                   hook=./resources/scripts/sign_for_darwin.sh "linux" "/Users/michal/RP/RPCN/connect/target/dist/connect_linux_arm64_v8.0/redpanda-connect" "true"
  • docker images (v2)
    • dockers_v2 is experimental and subject to change
      details=
      │ Keep an eye on the release notes if you wish to rely on this for production builds.
      │ Please provide any feedback you might have at https://github.com/orgs/goreleaser/discussions/6005
    • snapshot build: will not push any images
    • creating images
      images=
      │ public.ecr.aws/l9j0i2e0/connect:edge-arm64
      │ redpandadata/connect:edge-arm64
      id=connect
    • created images
    

--- a/taskfiles/docker.yml
+++ b/taskfiles/docker.yml
@@ -5,19 +5,39 @@ tasks:
     desc: Build main Docker image using goreleaser for local development
     aliases:
       - main
-    cmds:
-      - goreleaser release --snapshot --clean --skip=archive,publish --config=.goreleaser/connect.yaml
+    cmd:
+      task: build
+      vars:
+        CONFIG_FILE: .goreleaser/connect.yaml
 
   redpanda-connect-cloud:
     desc: Build cloud Docker image using goreleaser for local development
     aliases:
       - cloud
-    cmds:
-      - goreleaser release --snapshot --clean --skip=archive,publish --config=.goreleaser/connect-cloud.yaml
+    cmd:
+      task: build
+      vars:
+        CONFIG_FILE: .goreleaser/connect-cloud.yaml
 
   redpanda-connect-ai:
     desc: Build AI Docker image using goreleaser for local development
     aliases:
       - ai
-    cmds:
-      - goreleaser release --snapshot --clean --skip=archive,publish --config=.goreleaser/connect-ai.yaml
+    cmd:
+      task: build
+      vars:
+        CONFIG_FILE: .goreleaser/connect-ai.yaml
+
+  build:
+    internal: true
+    vars:
+      CONFIG_FILE: '{{.CONFIG_FILE}}'
+      GOARCH: '{{.GOARCH | default "arm64"}}'
+    cmd: >
+      goreleaser release --snapshot --clean --skip=archive,nfpm,publish
+      --config=<(yq 
+      '.builds[0].goos = ["linux"] |
+      .builds[0].goarch = ["{{.GOARCH}}"] |
+      .dockers_v2[0].platforms = ["linux/{{.GOARCH}}"] |
+      .checksum.disable = true'
+      {{.CONFIG_FILE}})
